# gitgitgit

./: .gitignore  GEMINI.md  LLM_001_Langchain_Components.ipynb  LLM_002_LangSmith_LCEL.ipynb  LLM_003_Langfuse_Prompt_Management.ipynb  LLM_004_LangChain_PDF_RAG.ipynb  LLM_005_Prompt_Engineering_Fewshot.ipynb  LLM_006_Prompt_Engineering_CoT.ipynb  LLM_007_Housing_FAQ_Bot.ipynb  LLM_014_LLM-as-Judge-LangChain.ipynb  LLM_015_Langfuse_Evaluation.ipynb  LLM_016_ToolCalling_Agent.ipynb  LLM_017_MCP.ipynb  README.md  main.py  pyproject.toml  weather_server_sse.py
005_llm_rag/: LLM_001_Langchain_Components (1).ipynb  LLM_002_LangSmith_LCEL (1).ipynb  LLM_003_Langfuse_Prompt_Management (1).ipynb
