[project]
name = "004-llm-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agency-swarm>=1.6.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "langchain>=1.2.1",
    "langchain-openai>=1.1.6",
    "langfuse>=3.11.2",
    "mcp[cli]>=1.25.0",
]
